[package]
name = "antithesis-launcher"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"

[lints.clippy]
complexity = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
